--- a/index.html
+++ b/index.html
@@ -2,37 +2,40 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>NikoAd — Реклама в Telegram</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet"/>
   <style>
     body {
       margin: 0;
       font-family: 'Montserrat', sans-serif;
-      background: linear-gradient(135deg, #6a0dad, #12005e);
+      background: linear-gradient(135deg, #6a0dad, #2e004f);
       color: #f0f0f5;
-      padding: 20px;
+      padding: 30px 20px;
     }
 
     h1 {
       text-align: center;
-      margin-bottom: 30px;
+      font-weight: 700;
+      font-size: 2rem;
+      margin-bottom: 40px;
     }
 
     .channels {
       display: flex;
       flex-wrap: wrap;
-      gap: 20px;
       justify-content: center;
+      gap: 20px;
+      margin-bottom: 60px;
     }
 
     .channel-card {
-      background: #2e005e;
-      border-radius: 12px;
+      background: #37006d;
+      border-radius: 14px;
       padding: 20px;
-      width: 240px;
-      box-shadow: 0 4px 15px rgba(106, 13, 173, 0.5);
-      transition: transform 0.3s ease;
+      width: 260px;
+      box-shadow: 0 6px 20px rgba(0,0,0,0.3);
+      transition: transform 0.3s;
     }
 
     .channel-card:hover {
@@ -40,257 +43,225 @@
     }
 
     .channel-name {
-      font-weight: bold;
-      font-size: 1.1rem;
-      margin-bottom: 10px;
+      font-size: 1.2rem;
+      font-weight: 700;
+      margin-bottom: 8px;
     }
 
-    .subscribers {
-      font-size: 0.9rem;
+    .channel-subs {
+      color: #d0c9f5;
       margin-bottom: 12px;
-      color: #b0a9e6;
     }
 
-    .btn-stat {
+    .btn-stats {
       background: #8a2be2;
       border: none;
+      padding: 10px 16px;
       color: white;
-      padding: 8px 12px;
+      font-weight: 600;
       border-radius: 8px;
       cursor: pointer;
+      transition: background 0.3s;
     }
 
-    .stats-modal {
+    .btn-stats:hover {
+      background: #a060ff;
+    }
+
+    /* Модальное окно */
+    .modal {
       display: none;
       position: fixed;
-      top: 10%;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 90%;
-      max-width: 600px;
-      background: #210044;
-      border-radius: 14px;
-      padding: 20px;
       z-index: 1000;
-      box-shadow: 0 0 30px rgba(0,0,0,0.8);
-    }
-
-    .stats-modal.active {
-      display: block;
-    }
-
-    .overlay {
-      position: fixed;
-      top: 0; left: 0;
+      left: 0; top: 0;
       width: 100%; height: 100%;
       background: rgba(0,0,0,0.6);
-      z-index: 999;
-      display: none;
+      justify-content: center;
+      align-items: center;
     }
 
-    .overlay.active {
-      display: block;
-    }
-
-    .form-block {
-      margin-top: 40px;
-      background: #2e005e;
-      padding: 25px;
+    .modal-content {
+      background: #2e004f;
+      padding: 30px;
       border-radius: 12px;
-      max-width: 600px;
-      margin-left: auto;
-      margin-right: auto;
+      max-width: 500px;
+      width: 90%;
+      color: #fff;
+      box-shadow: 0 8px 30px rgba(0,0,0,0.4);
+      position: relative;
     }
 
-    .form-block h2 {
+    .modal h2 {
       margin-top: 0;
     }
 
-    form input, form textarea, form select {
-      width: 100%;
-      padding: 10px 14px;
-      margin-bottom: 15px;
-      border: none;
-      border-radius: 10px;
-      background: #3c007d;
-      color: white;
+    .modal p {
+      margin: 10px 0;
     }
 
-    form button {
+    .close-btn {
+      position: absolute;
+      top: 15px;
+      right: 20px;
+      font-size: 20px;
+      cursor: pointer;
+      color: #aaa;
+    }
+
+    .close-btn:hover {
+      color: #fff;
+    }
+
+    /* Заявка */
+    .form-block {
+      background: #2e004f;
+      padding: 30px;
+      border-radius: 14px;
+      max-width: 600px;
+      margin: 0 auto;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.3);
+    }
+
+    .form-block input, .form-block textarea {
       width: 100%;
+      padding: 12px;
+      margin-bottom: 16px;
+      background: #470080;
+      border: none;
+      border-radius: 10px;
+      color: #fff;
+    }
+
+    .form-block button {
       background: #8a2be2;
       border: none;
-      padding: 12px;
+      padding: 14px;
+      width: 100%;
       border-radius: 10px;
       color: white;
-      font-weight: bold;
+      font-weight: 700;
+      font-size: 1rem;
       cursor: pointer;
     }
 
-    #price {
-      text-align: center;
-      font-size: 1.1rem;
-      margin-top: 10px;
-      font-weight: bold;
+    .form-block button:hover {
+      background: #a060ff;
     }
 
+    #status {
+      text-align: center;
+      margin-top: 10px;
+      font-weight: 600;
+    }
   </style>
 </head>
 <body>
 
 <h1>NikoAd — Реклама в Telegram</h1>
 
-<div class="channels" id="channelsContainer"></div>
+<div class="channels" id="channels"></div>
 
-<!-- Статистика -->
-<div class="overlay" id="overlay"></div>
-<div class="stats-modal" id="statsModal">
-  <h2 id="statsTitle"></h2>
-  <p id="statsContent"></p>
-  <button onclick="closeStats()">Назад</button>
+<!-- Модалка -->
+<div class="modal" id="modal">
+  <div class="modal-content">
+    <span class="close-btn" id="closeModal">&times;</span>
+    <h2 id="modalTitle">Статистика</h2>
+    <p id="modalStats"></p>
+  </div>
 </div>
 
-<!-- Форма -->
+<!-- Форма заявки -->
 <div class="form-block">
-  <h2>Оформить заявку</h2>
+  <h2>Оставить заявку</h2>
   <form id="orderForm">
-    <label>Выберите каналы:</label>
-    <select id="channelSelect" multiple required></select>
-
-    <label>Выберите время размещения:</label>
-    <select id="durationSelect" required>
-      <option value="24">24 часа</option>
-      <option value="48">48 часов</option>
-      <option value="72">72 часа</option>
-      <option value="forever">Навсегда</option>
-      <option value="story">История</option>
-    </select>
-
-    <div id="price">Цена: 0 ₽</div>
-
-    <input type="text" name="name" placeholder="Ваше имя" required>
-    <input type="text" name="telegram" placeholder="Ваш Telegram (@username)" required>
-    <textarea name="message" placeholder="Текст рекламного поста" required></textarea>
-
-    <button type="submit">Отправить</button>
-    <div id="statusMsg"></div>
+    <input type="text" id="name" placeholder="Ваше имя" required>
+    <input type="text" id="tg" placeholder="Telegram (@username)" required>
+    <textarea id="msg" placeholder="Текст рекламного поста" rows="4" required></textarea>
+    <button type="submit">Отправить заявку</button>
+    <div id="status"></div>
   </form>
 </div>
 
 <script>
   const channels = [
     {
-      id: 'tver',
-      name: 'Ищу Тебя Тверь',
-      link: 'https://t.me/ishutebyatverr',
-      subs: 10500,
-      stats: 'СРЕДНИЙ ОХВАТ: 2573 / ERR: 26% / ER: 0.49%',
-      prices: { "24": 1550, "48": 1700, "72": 1900, "forever": 2600, "story": 1100 }
-    },
-    {
-      id: 'nizhnevartovsk',
-      name: 'Ищу Тебя Нижневартовск',
-      link: 'https://t.me/nizhnevartovsk_dtp',
-      subs: 6000,
-      stats: 'СРЕДНИЙ ОХВАТ: 2156 / ERR: 43.7% / ER: 0.73%',
-      prices: { "24": 1400, "48": 1600, "72": 1800, "forever": 2200, "story": 1100 }
-    },
-    {
-      id: 'niko',
       name: 'NIKO 🇦🇲',
-      link: 'https://t.me/nikotver',
       subs: 3500,
-      stats: 'СРЕДНИЙ ОХВАТ: 773 / ERR: 247% / ER: 2.67%',
-      prices: { "24": 1000, "48": 1150, "72": 1250, "story": 800 }
+      views: 7600,
+      stats: 'Подписчиков: 3,500\nПросмотры: 7,600\nERR: 247%\nER: 2.67%\nОхват за 24ч: 773',
     },
     {
-      id: 'krasnoyarsk',
+      name: 'Ищу Тебя Тверь',
+      subs: 10500,
+      views: 3200,
+      stats: 'Подписчиков: 10,500\nПросмотры: 3,200\nERR: 26%\nER: 0.49%\nОхват за 24ч: 2,573',
+    },
+    {
+      name: 'Ищу Тебя Нижневартовск',
+      subs: 6000,
+      views: 2600,
+      stats: 'Подписчиков: 6,000\nПросмотры: 2,600\nERR: 43.7%\nER: 0.73%\nОхват за 24ч: 2,156',
+    },
+    {
       name: 'Ищу Тебя Красноярск',
-      link: 'https://t.me/ishutebyakrasnoyarsk',
       subs: 3000,
-      stats: 'СРЕДНИЙ ОХВАТ: 574 / ERR: 37.8% / ER: 0.98%',
-      prices: { "24": 800, "48": 1000, "72": 1150, "forever": 1300, "story": 700 }
+      views: 700,
+      stats: 'Подписчиков: 3,000\nПросмотры: 700\nERR: 38%\nER: 0.98%\nОхват за 24ч: 574',
     }
   ];
 
-  const channelsContainer = document.getElementById('channelsContainer');
-  const channelSelect = document.getElementById('channelSelect');
-  const durationSelect = document.getElementById('durationSelect');
-  const priceDisplay = document.getElementById('price');
-  const statsModal = document.getElementById('statsModal');
-  const overlay = document.getElementById('overlay');
+  const container = document.getElementById('channels');
+  const modal = document.getElementById('modal');
+  const modalTitle = document.getElementById('modalTitle');
+  const modalStats = document.getElementById('modalStats');
+  const closeModal = document.getElementById('closeModal');
 
-  // Рендер карточек
-  channels.forEach(ch => {
-    // Карточка
-    const div = document.createElement('div');
-    div.className = 'channel-card';
-    div.innerHTML = `
-      <div class="channel-name"><a href="${ch.link}" target="_blank" style="color:#bf94ff;text-decoration:none;">${ch.name}</a></div>
-      <div class="subscribers">Подписчиков: ${ch.subs}</div>
-      <button class="btn-stat" onclick="showStats('${ch.id}')">Показать статистику</button>
+  channels.forEach(channel => {
+    const card = document.createElement('div');
+    card.className = 'channel-card';
+    card.innerHTML = `
+      <div class="channel-name">${channel.name}</div>
+      <div class="channel-subs">Подписчиков: ${channel.subs}</div>
+      <button class="btn-stats">Показать статистику</button>
     `;
-    channelsContainer.appendChild(div);
-
-    // Добавить в select
-    const opt = document.createElement('option');
-    opt.value = ch.id;
-    opt.textContent = ch.name;
-    channelSelect.appendChild(opt);
+    card.querySelector('button').onclick = () => {
+      modalTitle.textContent = channel.name;
+      modalStats.textContent = channel.stats;
+      modal.style.display = 'flex';
+    };
+    container.appendChild(card);
   });
 
-  // Статистика
-  function showStats(id) {
-    const ch = channels.find(c => c.id === id);
-    document.getElementById('statsTitle').textContent = ch.name;
-    document.getElementById('statsContent').textContent = ch.stats;
-    statsModal.classList.add('active');
-    overlay.classList.add('active');
-  }
+  closeModal.onclick = () => modal.style.display = 'none';
+  window.onclick = e => {
+    if (e.target === modal) modal.style.display = 'none';
+  };
 
-  function closeStats() {
-    statsModal.classList.remove('active');
-    overlay.classList.remove('active');
-  }
-
-  // Цена
-  function updatePrice() {
-    const selected = Array.from(channelSelect.selectedOptions).map(opt => opt.value);
-    const duration = durationSelect.value;
-    let total = 0;
-    selected.forEach(id => {
-      const ch = channels.find(c => c.id === id);
-      if (ch && ch.prices[duration]) {
-        total += ch.prices[duration];
-      }
-    });
-    priceDisplay.textContent = `Цена: ${total} ₽`;
-  }
-
-  channelSelect.addEventListener('change', updatePrice);
-  durationSelect.addEventListener('change', updatePrice);
-
-  // Отправка заявки (через Formspree)
-  document.getElementById('orderForm').addEventListener('submit', async function(e) {
+  // Форма заявки
+  document.getElementById('orderForm').addEventListener('submit', async e => {
     e.preventDefault();
-    const data = new FormData(this);
-    const statusMsg = document.getElementById('statusMsg');
+    const name = document.getElementById('name').value.trim();
+    const tg = document.getElementById('tg').value.trim();
+    const msg = document.getElementById('msg').value.trim();
 
     try {
-      const res = await fetch("https://formspree.io/f/xnnvlzor", {
-        method: "POST",
-        body: data,
-        headers: { 'Accept': 'application/json' }
+      const res = await fetch('https://nikoad-server.onrender.com/api/send', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ name, tg, msg })
       });
+
+      const statusDiv = document.getElementById('status');
       if (res.ok) {
-        statusMsg.textContent = "✅ Заявка успешно отправлена!";
-        this.reset();
-        priceDisplay.textContent = "Цена: 0 ₽";
+        statusDiv.textContent = '✅ Заявка отправлена!';
+        statusDiv.style.color = '#8efc8e';
+        document.getElementById('orderForm').reset();
       } else {
-        statusMsg.textContent = "❌ Ошибка отправки.";
+        statusDiv.textContent = '❌ Ошибка при отправке';
+        statusDiv.style.color = '#ff8e8e';
       }
     } catch {
-      statusMsg.textContent = "❌ Ошибка сети.";
+      document.getElementById('status').textContent = '❌ Ошибка сети. Проверьте соединение.';
     }
   });
 </script>
